# WindowsSystem

./: CMakeLists.txt  README.md  main.cpp
BasicElements/: BasicElements.cpp  BasicElements.hpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  EventSystemBridge.hpp
Events/: Event.cpp  Event.hpp
Renderer/: CMakeLists.txt  RendererBridge.hpp
SFMLEvents/: SFMLEventSystem.cpp  SFMLEventSystem.hpp
SFMLRenderer/: CMakeLists.txt  SFMLRenderer.cpp  SFMLRenderer.hpp
Shape/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp
Utility/: CMakeLists.txt  Color.hpp  Point.hpp
Window/: CMakeLists.txt  Window.cpp  Window.hpp
WindowComponents/: Components.cpp  Components.hpp
